src/test/compile-fail/minus-string.rs
// error-pattern:cannot apply unary operator `-` to type `str`

fn main() { -"foo"; }
